--- a/danusys-platform/src/main/resources/templates/layout/layout_signage.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_signage.html
@@ -13,11 +13,15 @@
     <!-- jquery -->
     <script type="text/javascript" src="/webjars/jquery/3.6.0/dist/jquery.min.js" ></script>
     <script type="text/javascript" src="/js/pages/signageDisplay.js"></script>
+    <script type="text/javascript" src="/js/common/common.js"></script>
 
     <!-- video -->
     <script type="text/javascript" src="/js/kurento/video.js"></script>
     <script type="text/javascript" src="/js/kurento/kurento-utils.js"></script>
     <script type="text/javascript" src="/js/kurento/kurento-client.js"></script>
+
+    <!-- pro4j -->
+    <script type="text/javascript" src="/webjars/proj4js/2.2.1/proj4.js"></script>
 
     <!-- apexCharts-->
     <link rel="stylesheet" type="text/css" href="/css/plugin/apexCharts/apexcharts.css">
@@ -29,7 +33,7 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         let templateObj = [[${data}]];
-        signageDisplay.init(templateObj.data);
+        signageDisplay.init(templateObj);
         /*]]>*/
     </script>
     <th:block layout:fragment="content" />
