지자체 폴리곤 api 생성 및 표출.

--- a/danusys-platform/src/main/resources/templates/view/pages/statistics.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/statistics.html
@@ -83,11 +83,11 @@
             <div class="graph_contents">
                 <dl class="graph_title">
                     <dt>이벤트 발생 수</dt>
-                    <dd>
-                        <span>시</span>
-                        <span>일</span>
-                        <span>주</span>
-                        <span>월</span>
+                    <dd class="chartBtn">
+                        <span id="sumHour" class="on">시</span>
+                        <span id="sumDay">일</span>
+                        <span id="sumWeek">주</span>
+                        <span id="sumMonth">월</span>
                     </dd>
                 </dl>
                 <div class="graph_area" id="sumChart"></div>
@@ -95,11 +95,11 @@
             <div class="graph_contents">
                 <dl class="graph_title">
                     <dt>평균 이벤트 발생 수</dt>
-                    <dd>
-                        <span>시간대</span>
-                        <span>요일</span>
-                        <span>주차</span>
-                        <span>월</span>
+                    <dd class="chartBtn">
+                        <span id="avgHour" class="on">시간대</span>
+                        <span id="avgDay">요일</span>
+                        <span id="avgWeek">주차</span>
+                        <span id="avgMonth">월</span>
                     </dd>
                 </dl>
                 <div class="graph_area" id="avgChart"></div>
