--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -242,76 +242,76 @@
                     <ul>
                         <li>
                             <span>드론 ID</span>
-                            <input data-value="facilityId" type="text" placeholder="Drone_GJ00">
+                            <input data-value="facilityId" type="text" placeholder="Drone_GJ00"/>
                         </li>
                         <li>
                             <span>드론 명</span>
-                            <input data-value="" type="text" placeholder="드론1_김제">
+                            <input data-value="" type="text" placeholder="드론1_김제"/>
                         </li>
                         <li>
                             <span>Serial No.</span>
-                            <input data-value="facilitySeq" type="text" placeholder="********">
+                            <input data-value="serialNumber" type="text" placeholder="********"/>
                         </li>
                         <li>
                             <span>드론 모델 명</span>
-                            <input type="text" placeholder="Drone_00">
+                            <input data-value="modelName" type="text" placeholder="Drone_00"/>
                         </li>
                         <li>
                             <span>제조사</span>
-                            <input type="text" placeholder="LG">
+                            <input data-value="manufacturer" type="text" placeholder="LG"/>
                         </li>
-                        <li>
+                        <!--<li>
                             <span>LTE</span>
-                            <input type="text" placeholder="********">
-                        </li>
+                            <input data-value="" type="text" placeholder="********">
+                        </li>-->
                         <li>
                             <span>SIM 번호</span>
-                            <input type="text" placeholder="********">
+                            <input data-value="serialNumber" type="text" placeholder="********"/>
                         </li>
-                        <li>
+                        <!--<li>
                             <span>드론 Type</span>
-                            <input type="text" placeholder="드론 Type">
-                        </li>
+                            <input data-value="" type="text" placeholder="드론 Type">
+                        </li>-->
                         <li>
                             <span>서비스</span>
-                            <input type="text" placeholder="촬영">
+                            <input data-value="" type="text" placeholder="촬영"/>
                         </li>
                         <li>
                             <span>장착 H/W</span>
-                            <input type="text" placeholder="카메라">
+                            <input data-value="" type="text" placeholder="카메라"/>
                         </li>
                         <li>
                             <span>배터리 모듈</span>
-                            <input type="text" placeholder="배터리 모듈">
+                            <input data-value="" type="text" placeholder="배터리 모듈"/>
                         </li>
                         <li>
                             <span>배터리 셀</span>
-                            <input type="text" placeholder="배터리 셀">
+                            <input data-value="" type="text" placeholder="배터리 셀"/>
                         </li>
                         <li>
                             <span>배터리 용량</span>
-                            <input type="text" placeholder="배터리 용량">
+                            <input data-value="batteryCapacity" type="text" placeholder="배터리 용량"/>
                         </li>
                         <li>
                             <span>배터리 최대<br>비행 시간</span>
-                            <input type="text" placeholder="00분">
+                            <input data-value="batteryFlightTime" type="text" placeholder="00분"/>
                         </li>
                         <li>
                             <span>평균 비행 속도</span>
-                            <input type="text" placeholder="0m/s">
+                            <input data-value="" type="text" placeholder="0m/s"/>
                         </li>
                         <li>
                             <span>긴급 복귀<br>배터리 잔여율</span>
-                            <input type="text" placeholder="00%">
+                            <input data-value="emergencyBatteryLevel" type="text" placeholder="00%"/>
                         </li>
                         <li>
                             <span>최근 운행<br>종료 일시</span>
-                            <input type="text" placeholder="0000-00-00 00:00:00">
+                            <input data-value="" type="text" placeholder="0000-00-00 00:00:00"/>
                         </li>
-                        <li>
+                        <!--<li>
                             <span>예약 비행 정보</span>
-                            <input type="text" placeholder="매주 화 14:00, 매주 목 16:00">
-                        </li>
+                            <input data-value="" type="text" placeholder="매주 화 14:00, 매주 목 16:00">
+                        </li>-->
                     </ul>
                 </div>
                 <dl class="area_title">
