--- a/danusys-platform/src/main/resources/templates/view/pages/statistics.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/statistics.html
@@ -10,11 +10,11 @@
         <i><img src="/images/default/arrowNext.svg"></i>
         <span>이벤트 발생 통계</span>
         <i><img src="/images/default/arrowNext.svg"></i>
-        <span>스마트분전함 이벤트</span>
+        <span><span class="event_type"></span> 이벤트</span>
     </h4>
     <section class="statistics_content">
         <article class="search_form" id="searchForm">
-            <h6><span calss="eventType"></span> 이벤트 발생 통계 검색</h6>
+            <h6><span class="event_type"></span> 이벤트 발생 통계 검색</h6>
             <form>
                 <div>
                     <p>이벤트 종류</p>
@@ -62,7 +62,7 @@
         <article class="search_list">
             <div class="article_title">
                 <dl class="title">
-                    <dt><span calss="eventType"></span> 이벤트 목록</dt>
+                    <dt><span class="event_type"></span> 이벤트 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
             </div>
