지자체별 데이터 분기, 행정동 조건 추가중

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -1236,3 +1236,9 @@
         </th:block>
     </th:block>
 </html>
+
+
+<!-- (시설)드론 : 김제 -->
+<!-- (개소)분전함 : 김제 -->
+<!-- (개소)스마트정류장 : 광명, 영주 -->
+<!-- (개소)스마트폴 : 광명, 부산남구 -->
