개소 및 이벤트 데이터 분기중

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -260,7 +260,7 @@
                         </li>
                         <li>
                             <span>개소 명</span><!-- 스마트 분전함, 스마트 정류장 -->
-                            <input data-value="" type="text" placeholder="스마트 버스정류소" disabled>
+                            <input data-value="stationKindName" type="text" placeholder="스마트 버스정류소" disabled>
                         </li>
                         <li>
                             <span>현재 상태</span>
