관제 개소패널 데이터 적용 테스트

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -924,7 +924,7 @@
         <section th:if="${municipality == '45210000'}" id="drone" class="menu_fold">
             <ul class="tab">
 <!--                <li data-value="event" class="active"><a>실시간</a></li>-->
-                <li data-value="facility"><a>기체/개소</a></li>
+                <li data-value="facility" class="active"><a>기체/개소</a></li>
 <!--                <li data-value="eventPast"><a>과거이력</a></li>-->
             </ul>
             <p class="lnb_fold"><i><img src="/images/default/foldOn.svg"></i></p>
