--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -245,10 +245,10 @@
                 <li data-value="control"><a>시설물 제어</a></li>
             </ul>
             <div class="area_right_scroll select" data-value="info">
-                <dl class="area_title">
+                <dl class="area_title" data-group="stationInfo">
                     <dt><i><img src="/images/default/titleIcon06.svg"></i>개소 정보</dt>
                 </dl>
-                <div class="area_right_text">
+                <div class="area_right_text" data-group="stationInfo">
                     <ul>
                         <li><!--data-value에 prop 키값을 넣으세요-->
                             <span>관리 번호</span>
@@ -276,10 +276,10 @@
                         </li>
                     </ul>
                 </div>
-                <dl class="area_title">
+                <dl class="area_title" data-group="stationState">
                     <dt><i><img src="/images/default/titleIcon04.svg"></i>개소 상태</dt>
                 </dl>
-                <div class="area_right_text">
+                <div class="area_right_text" data-group="stationState">
                     <ul>
                         <li>
                             <span>장비 연결 끊김</span>
@@ -295,10 +295,10 @@
                         </li>
                     </ul>
                 </div>
-                <dl class="area_title">
+                <dl class="area_title" data-group="stationStatus">
                     <dt><i><img src="/images/default/titleIcon04.svg"></i>개소 현황</dt>
                 </dl>
-                <div class="area_right_bus_status">
+                <div class="area_right_bus_status" data-group="stationStatus">
                     <dl data-value="">
                         <dt><i><img src="/images/default/busStationState01.svg"></i>현재인원</dt>
                         <dd><span class="value">8</span>명</dd>
@@ -327,10 +327,10 @@
                 </div>
             </div>
             <div class="area_right_scroll" data-value="control">
-                <dl class="area_title">
+                <dl class="area_title" data-group="facilityControl">
                     <dt><i><img src="/images/default/titleIcon06.svg"></i>시설물 제어</dt>
                 </dl>
-                <div class="area_right_bus_control">
+                <div class="area_right_bus_control" data-group="facilityControl">
                     <dl>
                         <dt>
                             <span class="circle green"></span>
