광명 스마트정류장 관제 우측 패널 데이터 표출(하드코딩 버전)

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -331,15 +331,15 @@
                     <dt><i><img src="/images/default/titleIcon06.svg"></i>시설물 제어</dt>
                 </dl>
                 <div class="area_right_bus_control" data-group="facilityControl">
-                    <dl>
-                        <dt>
-                            <span class="circle green"></span>
-                            <span>CCTV</span>
-                        </dt>
-                        <dd class="ptz_toggle">
-                            <input type="checkbox" id="control1"><label for="control1">Toggle</label>
-                        </dd>
-                    </dl>
+<!--                    <dl>-->
+<!--                        <dt>-->
+<!--                            <span class="circle green"></span>-->
+<!--                            <span>CCTV</span>-->
+<!--                        </dt>-->
+<!--                        <dd class="ptz_toggle">-->
+<!--                            <input type="checkbox" id="control1"><label for="control1">Toggle</label>-->
+<!--                        </dd>-->
+<!--                    </dl>-->
 <!--                    <dl>-->
 <!--                        <dt>-->
 <!--                            <span class="circle red"></span>-->
