--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -252,27 +252,27 @@
                     <ul>
                         <li><!--data-value에 prop 키값을 넣으세요-->
                             <span>관리 번호</span>
-                            <input data-value="stationSeq" type="text" placeholder="AED0000" disabled>
+                            <input data-value="stationSeq" type="text" disabled>
                         </li>
                         <li>
                             <span>개소 종류</span>
-                            <input data-value="" type="text" placeholder="AED 탈거" disabled>
+                            <input data-value="stationKindName" type="text" disabled>
                         </li>
                         <li>
                             <span>개소 명</span><!-- 스마트 분전함, 스마트 정류장 -->
-                            <input data-value="stationKindName" type="text" placeholder="스마트 버스정류소" disabled>
+                            <input data-value="stationName" type="text" disabled>
                         </li>
                         <li>
                             <span>현재 상태</span>
-                            <input data-value="" type="text" placeholder="SB001/광명시청(하행)" disabled>
+                            <input data-value="" type="text" disabled>
                         </li>
                         <li>
                             <span>행정 구역</span>
-                            <input data-value="administZoneName" type="text" placeholder="소하동" disabled>
+                            <input data-value="administZoneName" type="text" disabled>
                         </li>
                         <li>
                             <span>개소 주소</span>
-                            <input data-value="address" type="text" placeholder="경기도 광명시 소하동 1294" disabled>
+                            <input data-value="address" type="text" disabled>
                         </li>
                     </ul>
                 </div>
@@ -283,15 +283,15 @@
                     <ul>
                         <li>
                             <span>장비 연결 끊김</span>
-                            <input data-value="" type="text" placeholder="없음">
+                            <input data-value="" type="text" placeholder="">
                         </li>
                         <li>
                             <span>장비 고장</span>
-                            <input data-value="" type="text" placeholder="없음">
+                            <input data-value="" type="text" placeholder="">
                         </li>
                         <li>
                             <span>설치여부</span>
-                            <input data-value="" type="text" placeholder="교통약자편의시설(미설치), 선팅필름(미부착)">
+                            <input data-value="" type="text" placeholder="">
                         </li>
                     </ul>
                 </div>
