--- a/danusys-platform/src/main/resources/static/css/signage.css
+++ b/danusys-platform/src/main/resources/static/css/signage.css
@@ -4,7 +4,7 @@
 /* wrap_signage */
 html, body{font-size: 16px;}
 .wrap_signage{width: 100%; height: 100%; color: #333; background: #35363a; display: flex; flex-direction: column;}
-.wrap_signage > div{display: flex; flex: 1;}
+.wrap_signage > div{display: flex; flex: 1; overflow: hidden;}
 
 /* wrap_atmosphere */
 .wrap_atmosphere{flex-direction: column; grid-gap: 2rem; padding: 2rem;}
